adding endpoint destinations, tests and some fixes